# 24game

./: CMakeLists.txt
initial_version/: void_ptr.cpp
src/: CMakeLists.txt  game.h  main.cpp  techniques.cpp
